--- a/todo-api/package.json
+++ b/todo-api/package.json
@@ -8,9 +8,9 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.21.2"
-  }
+  },
+  "description": ""
 }
